--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/scout": "^9.4",
         "laravel/tinker": "^2.7",
         "spatie/laravel-sluggable": "^3.4"
     },
